<resources>
    <string name="app_name">快乐恩施</string>
    <string name="title_home">首页</string>
    <string name="title_travel">旅行</string>
    <string name="title_food">美食</string>

    <!--首页-->
    <string name="hint_main_open_toggle">Open Toggle</string>
    <string name="hint_main_close_toggle">Close Toggle</string>
    <string name="menu_left_navigation_my_attention">我的收藏</string>
    <string name="menu_left_navigation_my_route">我的线路</string>
    <string name="menu_left_navigation_my_message">我的消息</string>
    <string name="menu_left_navigation_system_message">系统消息</string>
    <string name="menu_left_navigation_setting">设置</string>
    <string name="text_team_travel">跟团出游</string>
    <string name="text_person_show">私人定制</string>
    <string name="text_new_announcement">最新公告</string>
    <string name="text_hot_scenic_area">热门景点</string>
    <string name="text_scenc_price">￥</string>
    <string name="text_scenc_advice_price">参考价:</string>

    <!--设置-->
    <string name="title_setting">设置</string>
    <string name="text_btn_logout">退出登录</string>
    <string name="text_accept_push">接收推送</string>
    <string name="text_setting_about">关于</string>
    <string name="text_setting_feed_back">意见反馈</string>
    <string name="text_setting_clear_cache">清除缓存</string>
    <string name="text_clear_cache_content">您确定要清除缓存吗?</string>
    <string name="text_clear_cache_sure">狠心清除</string>
    <string name="text_clear_cache_cancel">容我想想</string>
    <string name="text_logout_content">您确定要退出登录吗?</string>
    <string name="text_logout_sure">退出登录</string>
    <string name="text_logout_cancel">暂不退出</string>

    <!--关于-->
    <string name="title_about">关于</string>
    <string name="text_copyright_content">© 2017 Ricky. All Rights Reserved</string>
    <string name="text_about_app_name">快乐恩施APP</string>
    <string name="text_search_update">检查更新</string>
    <string name="text_share_to_friends">推荐给好友</string>

    <!--意见反馈-->
    <string name="title_feed_back">意见反馈</string>
    <string name="feed_back_submit">提交</string>
    <string name="feed_back_text_count">0/150</string>
    <string name="hint_feed_back">我们需要您的宝贵意见</string>

    <!--登录-->
    <string name="title_login">登录</string>
    <string name="hint_login_phone">请输入手机号码</string>
    <string name="text_forget_password">忘记密码？</string>
    <string name="hint_login_password">请输入密码</string>
    <string name="text_btn_login">登录</string>
    <string name="text_register">立即注册</string>

    <!--验证码-->
    <string name="hint_code_input_code">请输入验证码</string>
    <string name="text_btn_get_code">获取验证码</string>
    <string name="text_submit_code">下一步</string>
    <string name="title_code">验证码</string>

    <!--注册-->
    <string name="title_register">注册</string>
    <string name="text_set_nickname">昵称:</string>
    <string name="text_set_password">密码:</string>
    <string name="text_hint_set_nickname">请输入您的昵称</string>
    <string name="text_hint_set_password">请设置您的密码</string>
    <string name="btn_register_now">立即注册</string>

    <!--重置密码-->
    <string name="title_reset_pass">新密码</string>
    <string name="et_new_pass_tip">新密码：</string>
    <string name="et_confirm_pass_tip">确认密码：</string>
    <string name="btn_reset_now">立即重置</string>
    <string name="hint_new_pass">请设置新密码</string>
    <string name="hint_confirm_pass">请确认新密码</string>
    <string name="dialog_reset_content">您的密码已重置,请使用新密码登录</string>
    <string name="dialog_reset_sure">确定</string>
    <string name="tip_password">密码为长度6~18位的字母和数字的组合</string>
    <!--我的收藏-->
    <string name="title_my_collection">我的收藏</string>

    <!--店铺详情-->
    <string name="title_shop_detail">店铺详情</string>
    <string name="shop_dining_meal">堂食套餐</string>
    <string name="shop_recomand_food">推荐菜</string>
    <string name="shop_user_comment">用户评价</string>
    <string name="shop_more_dining_meal">点击查看更多套餐</string>
    <string name="shop_all_comment">查看全部评价</string>
    <string name="shop_meal_price">门市价：￥</string>
    <string name="shop_more_comment_list">更多评论</string>
    <string name="shop_more_dining_list">更多套餐</string>

    <!--套餐详情-->
    <string name="title_meal_detail">套餐详情</string>
    <string name="meal_detail_price">￥</string>
    <string name="meal_detail_predate_now">立即预定</string>
    <string name="meal_detail_dining">套餐</string>
    <string name="meal_predate_need_know">预定须知</string>
    <string name="meal_work_date">有效期：</string>
    <string name="meal_use_time">使用时间：</string>
    <string name="meal_use_rule">使用规则：</string>

    <!--景点详情-->
    <string name="title_travel_detail">景点详情</string>
    <string name="tv_travel_price">门票</string>
    <string name="tv_travel_advice">入园参考</string>
    <string name="tv_travel_price_logo">￥</string>
    <string name="tv_travel_price_up">起</string>
</resources>
