<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_view_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_common_container"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/et_new_pass_tip"
                android:textColor="@color/colorTitle"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_new_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@null"
                android:hint="@string/hint_new_pass"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingBottom="12dp"
                android:paddingLeft="6dp"
                android:paddingTop="12dp"
                android:textColorHint="@color/colorTint"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_common_container"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/et_confirm_pass_tip"
                android:textColor="@color/colorTitle"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_confirm_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@null"
                android:hint="@string/hint_confirm_pass"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingBottom="12dp"
                android:paddingLeft="6dp"
                android:paddingTop="12dp"
                android:textColorHint="@color/colorTint"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_reset_now"
            style="@style/CommonBtnStyle"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="32dp"
            android:enabled="false"
            android:text="@string/btn_reset_now" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            android:text="@string/tip_password"
            android:textColor="@color/colorContent"
            android:textSize="12sp" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>