<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_view_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_common_container"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_set_nickname"
                android:textColor="@color/colorTitle" />

            <EditText
                android:id="@+id/et_set_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:hint="@string/text_hint_set_nickname"
                android:maxLength="10"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textColor="@color/colorContent"
                android:textColorHint="@color/colorTint"
                android:textSize="13sp" />

            <View
                style="@style/CommonDividerStyle"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/text_set_password"
                android:textColor="@color/colorTitle" />

            <EditText
                android:id="@+id/et_set_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:hint="@string/text_hint_set_password"
                android:inputType="textPassword"
                android:maxLength="18"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textColor="@color/colorContent"
                android:textColorHint="@color/colorTint"
                android:textSize="13sp" />

            <View
                style="@style/CommonDividerStyle"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_register_now"
            style="@style/CommonBtnStyle"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginTop="24dp"
            android:enabled="false"
            android:text="@string/btn_register_now" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>