<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_marginLeftPercent="12%"
            app:layout_marginRightPercent="12%"
            app:layout_marginTopPercent="15%">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_login_input"
                android:ellipsize="end"
                android:hint="@string/hint_login_phone"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="11"
                android:maxLines="1"
                android:textColor="@color/colorContent"
                android:textColorHint="@color/colorTint"
                android:textSize="14sp" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_login_input"
                android:ellipsize="end"
                android:hint="@string/hint_login_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="18"
                android:maxLines="1"
                android:textColor="@color/colorContent"
                android:textColorHint="@color/colorTint"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_es_play_login"
                style="@style/CommonBtnStyle"
                android:layout_marginTop="24dp"
                android:enabled="false"
                android:text="@string/text_btn_login" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/view_horizontal_divider"
                    android:layout_width="1dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:background="@color/colorDividerLine" />

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_toLeftOf="@+id/view_horizontal_divider"
                    android:paddingBottom="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/text_register"
                    android:textColor="@color/color_forget_pass_selector"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_toRightOf="@+id/view_horizontal_divider"
                    android:paddingBottom="16dp"
                    android:paddingLeft="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/text_forget_password"
                    android:textColor="@color/color_forget_pass_selector"
                    android:textSize="13sp" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.percent.PercentRelativeLayout>
</android.support.design.widget.CoordinatorLayout>