<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include layout="@layout/layout_view_toolbar" />

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_marginTopPercent="20%">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/text_about_app_name"
                android:textColor="@color/colorTitle"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_common_container"
                android:orientation="vertical">

                <RelativeLayout style="@style/SettingRelativeStyle">

                    <TextView
                        style="@style/SettingTvStyle"
                        android:text="@string/text_search_update" />

                    <TextView
                        android:id="@+id/tv_app_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:textColor="@color/colorContent"
                        android:textSize="13sp" />
                </RelativeLayout>

                <View
                    style="@style/CommonDividerStyle"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp" />

                <RelativeLayout
                    android:id="@+id/relative_share_to_friends"
                    style="@style/SettingRelativeStyle">

                    <TextView
                        style="@style/SettingTvStyle"
                        android:text="@string/text_share_to_friends" />

                    <ImageView style="@style/SettingRightImageStyle" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:text="@string/text_copyright_content"
            android:textColor="@color/colorSubContent"
            android:textSize="12sp" />
    </android.support.percent.PercentRelativeLayout>
</android.support.design.widget.CoordinatorLayout>