<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_view_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_margin="16dp"
                android:background="@drawable/bg_feed_back_content"
                android:padding="8dp">

                <EditText
                    android:id="@+id/et_feed_back_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/tv_feed_back_text_count"
                    android:background="@null"
                    android:gravity="left|top"
                    android:hint="@string/hint_feed_back"
                    android:maxLength="150"
                    android:textColor="@color/colorTitle"
                    android:textColorHint="@color/colorTint"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_feed_back_text_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/feed_back_text_count"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_submit_feed_back"
            style="@style/CommonBtnStyle"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="40dp"
            android:enabled="false"
            android:text="@string/feed_back_submit" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>